--- a/style.css
+++ b/style.css
@@ -25,9 +25,9 @@ main h2 {
 }
 
 /* Add Student Styles Below */
-.jane-style {
-    color: hotpink;
-    background-color: black;
+.alinah-williams {
+    color: pink;
+    background-color: blueviolet;
     padding: 3px;
 }
 
